# sde

./: .gitignore  README.md  birthday_problem.py  e10.py  e18.py  e3-a.py  e3-b.py  e4.py  e6.py  e9.py  pyproject.toml
.github/workflows/: deploy.yaml
notebooks/: assignment.py  brunton_nb.py
